# neom_demo

./: .dockerignore  .env.example  .gitignore  .npmrc  .vercelignore  Dockerfile  README.md  cli.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  requirements.txt  sync-and-ingest.sh  vite.config.ts
_bmad-output/implementation-artifacts/: 1-1-project-initialization-and-repository-setup.md  1-2-full-ui-shell-with-hardcoded-kpi-data-for-stakeholder-review.md  1-3-stakeholder-alignment-checkpoint.md  2-1-track-a-data-parsers-and-kpi-schema.md  2-10-workbook-intelligence-index.md  2-3-kpi-scorecards-and-trend-charts-ui.md  2-4-track-b-chromadb-rag-pipeline.md  2-5-excel-agent-interactive-tools.md  2-6-data-pipeline-bootstrap.md  2-7-batch-sheet-preview.md  2-8-sheet-label-map.md  2-9-agent-progress-feedback.md  3-1-litellm-client-and-provider-configuration.md  4-3-data-catalogue.md  (+29 more)
api/: bootstrap_env.py  index.py
data_extract/: rag_manifest.json
docs/: DEPLOY_SNAPSHOT.md  TOOLS_GUIDE.md  railway-deploy.md  vercel-handoff.md  vercel-light-deploy.md
scripts/: build_rag_index.py  build_workbook_index.py  free-port.sh  process_financial_data.py  process_schedule_data.py  run_all_preprocessing.sh
src/: App.tsx  bootstrap.tsx  index.css  main.tsx  mountFatal.ts
tests/: test_agent_service.py  test_arithmetic_integration.py  test_arithmetic_tools.py  test_chatbot_config.py  test_excel_tools.py  test_prompt_loader.py  test_query_gate.py  test_query_routing.py  test_rag_service.py  test_skills_loader.py  test_tool_integration.py
(+142 files in other folders)
